@@ -24,27 +24,24 @@ import java.nio.file.StandardCopyOption;
 import java.util.Collection;
 import java.util.regex.Pattern;
 
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import tools.jackson.databind.node.ArrayNode;
+import tools.jackson.databind.node.ObjectNode;
 
+import com.vaadin.flow.internal.FileIOUtils;
 import com.vaadin.flow.internal.JacksonUtils;
 import com.vaadin.flow.internal.StringUtil;
 import com.vaadin.flow.router.Layout;
 import com.vaadin.flow.router.Route;
-import com.vaadin.flow.server.ExecutionFailedException;
 import com.vaadin.flow.server.Version;
 
-import static com.vaadin.flow.server.frontend.FileIOUtils.compareIgnoringIndentationEOLAndWhiteSpace;
+import static com.vaadin.flow.internal.FileIOUtils.compareIgnoringIndentationEOLAndWhiteSpace;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
  * Generate default files for react-router if missing from the frontend folder.
  * <p>
- * </p>
  * The generated files are <code>Flow.tsx</code> and <code>routes.tsx</code>.
  * Where <code>Flow.tsx</code> is for communication between the Flow and the
  * router and contains the server side route target
@@ -194,7 +191,7 @@ public class TaskGenerateReactFiles
 
             if (routesTsx.exists()) {
                 track(routesTsx);
-                String routesContent = FileUtils.readFileToString(routesTsx,
+                String routesContent = Files.readString(routesTsx.toPath(),
                         UTF_8);
                 routesContent = StringUtil.removeComments(routesContent);
 
@@ -215,8 +212,6 @@ public class TaskGenerateReactFiles
 
     /**
      * Writes the `layout.json` file in the frontend generated folder.
-     * <p>
-     * </p>
      *
      * @param options
      *            the task options
@@ -271,23 +266,23 @@ public class TaskGenerateReactFiles
             File frontendGeneratedFolderRoutesTsx = new File(
                     frontendGeneratedFolder, FrontendUtils.ROUTES_TSX);
             File layoutsJson = new File(frontendGeneratedFolder, LAYOUTS_JSON);
-            FileUtils.deleteQuietly(flowTsx);
-            FileUtils.deleteQuietly(
+            FileIOUtils.deleteFileQuietly(flowTsx);
+            FileIOUtils.deleteFileQuietly(
                     new File(frontendGeneratedFolder, JSX_TRANSFORM_INDEX));
-            FileUtils.deleteQuietly(new File(frontendGeneratedFolder,
+            FileIOUtils.deleteFileQuietly(new File(frontendGeneratedFolder,
                     JSX_TRANSFORM_DEV_RUNTIME));
-            FileUtils.deleteQuietly(
+            FileIOUtils.deleteFileQuietly(
                     new File(frontendGeneratedFolder, JSX_TRANSFORM_RUNTIME));
-            FileUtils.deleteQuietly(layoutsJson);
-            FileUtils.deleteQuietly(vaadinReactTsx);
-            FileUtils.deleteQuietly(reactAdapterTsx);
-            FileUtils.deleteQuietly(frontendGeneratedFolderRoutesTsx);
+            FileIOUtils.deleteFileQuietly(layoutsJson);
+            FileIOUtils.deleteFileQuietly(vaadinReactTsx);
+            FileIOUtils.deleteFileQuietly(reactAdapterTsx);
+            FileIOUtils.deleteFileQuietly(frontendGeneratedFolderRoutesTsx);
 
             File routesTsx = new File(frontendDirectory,
                     FrontendUtils.ROUTES_TSX);
             if (routesTsx.exists()) {
-                String defaultRoutesContent = FileUtils
-                        .readFileToString(routesTsx, UTF_8);
+                String defaultRoutesContent = Files
+                        .readString(routesTsx.toPath(), UTF_8);
                 if (compareIgnoringIndentationEOLAndWhiteSpace(
                         defaultRoutesContent,
                         getFileContent(FrontendUtils.ROUTES_TSX),
@@ -360,7 +355,7 @@ public class TaskGenerateReactFiles
         try (InputStream indexTsStream = options.getClassFinder()
                 .getClassLoader()
                 .getResourceAsStream(CLASS_PACKAGE.formatted(fileName))) {
-            indexTemplate = IOUtils.toString(indexTsStream, UTF_8);
+            indexTemplate = StringUtil.toUTF8String(indexTsStream);
         }
         return indexTemplate;
     }
