@@ -33,6 +33,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.vaadin.experimental.FeatureFlags;
+import com.vaadin.flow.component.WebComponentExporter;
 import com.vaadin.flow.component.dependency.CssImport;
 import com.vaadin.flow.component.dependency.JavaScript;
 import com.vaadin.flow.component.dependency.JsModule;
@@ -55,7 +56,6 @@ import static com.vaadin.flow.server.frontend.scanner.FrontendClassVisitor.DEV;
  * For internal use only. May be renamed or removed in a future release.
  *
  * @author Vaadin Ltd
- * @since
  */
 class FullDependenciesScanner extends AbstractDependenciesScanner {
 
@@ -74,7 +74,9 @@ class FullDependenciesScanner extends AbstractDependenciesScanner {
     private Map<String, String> devPackages;
     private HashMap<String, List<String>> assets = new HashMap<>();
     private HashMap<String, List<String>> devAssets = new HashMap<>();
+    private List<CssData> themeCssData;
     private List<CssData> cssData;
+    private List<CssData> webComponentCssData;
     private List<String> scripts;
     private List<String> scriptsDevelopment;
     private List<String> modules;
@@ -151,7 +153,11 @@ class FullDependenciesScanner extends AbstractDependenciesScanner {
 
         collectScripts(modulesSet, modulesSetDevelopment, JsModule.class);
         collectScripts(scriptsSet, scriptsSetDevelopment, JavaScript.class);
-        cssData = discoverCss();
+
+        themeCssData = new ArrayList<>();
+        cssData = new ArrayList<>();
+        webComponentCssData = new ArrayList<>();
+        discoverCss();
 
         if (!reactEnabled) {
             modulesSet.removeIf(
@@ -215,8 +221,10 @@ class FullDependenciesScanner extends AbstractDependenciesScanner {
 
     @Override
     public Map<ChunkInfo, List<CssData>> getCss() {
-        return Collections.singletonMap(ChunkInfo.GLOBAL,
-                new ArrayList<>(cssData));
+        // Map theme CSS to the APP_SHELL chunk
+        return Map.ofEntries(Map.entry(ChunkInfo.APP_SHELL, themeCssData),
+                Map.entry(ChunkInfo.GLOBAL, cssData),
+                Map.entry(ChunkInfo.WEB_COMPONENT, webComponentCssData));
     }
 
     @Override
@@ -308,27 +316,41 @@ class FullDependenciesScanner extends AbstractDependenciesScanner {
         }
     }
 
-    private List<CssData> discoverCss() {
+    private void discoverCss() {
         try {
             Class<? extends Annotation> loadedAnnotation = getFinder()
                     .loadClass(CssImport.class.getName());
             Set<Class<?>> annotatedClasses = getFinder()
                     .getAnnotatedClasses(loadedAnnotation);
-            LinkedHashSet<CssData> result = new LinkedHashSet<>();
+            var themeCss = new LinkedHashSet<CssData>();
+            var globalCss = new LinkedHashSet<CssData>();
+            var webComponentCss = new LinkedHashSet<CssData>();
+
             for (Class<?> clazz : annotatedClasses) {
                 classes.add(clazz.getName());
-                if (AbstractTheme.class.isAssignableFrom(clazz)
-                        && (themeDefinition == null
-                                || !clazz.equals(themeDefinition.getTheme()))) {
+                var isAppShellClass = AppShellConfigurator.class
+                        .isAssignableFrom(clazz);
+                var isWebcomponentExporter = WebComponentExporter.class
+                        .isAssignableFrom(clazz);
+                var isThemeClass = AbstractTheme.class.isAssignableFrom(clazz);
+                if (isThemeClass && (themeDefinition == null
+                        || !clazz.equals(themeDefinition.getTheme()))) {
                     // Do not add css from all found theme classes,
                     // only defined theme.
                     continue;
                 }
                 List<? extends Annotation> imports = annotationFinder
                         .apply(clazz, loadedAnnotation);
-                imports.stream().forEach(imp -> result.add(createCssData(imp)));
+                imports.stream()
+                        .forEach(imp -> ((isAppShellClass || isThemeClass)
+                                ? themeCss
+                                : isWebcomponentExporter ? webComponentCss
+                                        : globalCss)
+                                .add(createCssData(imp)));
             }
-            return new ArrayList<>(result);
+            themeCssData.addAll(themeCss);
+            cssData.addAll(globalCss);
+            webComponentCssData.addAll(webComponentCss);
         } catch (ClassNotFoundException exception) {
             throw new IllegalStateException(
                     COULD_NOT_LOAD_ERROR_MSG + CssData.class.getName(),
